--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,5 @@ python:
 install: pip install -r requirements.txt
 # command to run tests, e.g. python setup.py test
 script:  python TestSPMResultDataModel.py
+# Update subtree nidm from main nidm repository
+before_install: git subtree pull --prefix nidm https://github.com/incf-nidash/ni-dm.git master --squash
