--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ install: pip install -r requirements.txt
 # command to run tests, e.g. python setup.py test
 script:  python TestSPMResultDataModel.py
 # Update subtree nidm from main nidm repository
-before_install: git subtree pull --prefix nidm https://github.com/incf-nidash/ni-dm.git master --squash
+before_install: 
+ - git config --global user.name "TravisCI"
+ - git subtree pull --prefix nidm https://github.com/incf-nidash/ni-dm.git master --squash
