--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ script:  python TestSPMResultDataModel.py
 # Update subtree nidm from main nidm repository
 before_install: 
  - git config --global user.name "TravisCI"
- - git subtree pull --prefix nidm https://github.com/incf-nidash/nidm.git master --squash --no-edit
+ - git subtree pull --prefix nidm https://github.com/incf-nidash/nidm.git master --squash
