--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 install: pip install -r requirements.txt
 # command to run tests, e.g. python setup.py test
 script:  python TestSPMResultDataModel.py
-# Update subtree nidm from main nidm repository
 before_install: 
  - git config --global user.name "TravisCI"
- - git subtree pull --prefix nidm https://github.com/incf-nidash/nidm.git master --squash
+ # Create subtree nidm from main nidm repository
+ - git subtree add --prefix nidm https://github.com/incf-nidash/nidm.git master --squash
