--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,6 @@ script:  python TestSPMResultDataModel.py
 before_install: 
  - git config --global user.name "TravisCI"
  # Create subtree nidm from main nidm repository
- - git subtree add --prefix nidm https://github.com/incf-nidash/nidm.git master --squash
+ - git remote add nidm https://github.com/incf-nidash/nidm.git
+ - git fetch nidm
+ - git subtree add --prefix nidm nidm/master --squash
