Add email address to avoid "*** Please tell me who you are"

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install: pip install -r requirements.txt
 script:  python TestSPMResultDataModel.py
 before_install: 
  - git config --global user.name "TravisCI"
+ - git config --global user.email "travis@dummy.com"
  # Create subtree nidm from main nidm repository
  - git remote add nidm https://github.com/incf-nidash/nidm.git
  - git fetch nidm
