--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ python:
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: pip install -r requirements.txt
 # command to run tests, e.g. python setup.py test
-script:  python TestSPMResultDataModel.py
+script:  
+- python TestSPMResultDataModel.py
+- cat debug.log
 before_install: 
  - git config --global user.name "TravisCI"
  - git config --global user.email "travis@dummy.com"
