--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ before_install:
  - git config --global user.email "travis@dummy.com"
  # Create subtree nidm from main nidm repository
  - git remote add nidm https://github.com/incf-nidash/nidm.git
+ - git remote add nidm_cmaumet https://github.com/cmaumet/nidm.git
  - git fetch nidm
  - git subtree add --prefix nidm nidm/master --squash
  - git subtree add --prefix nidm_releases/1.0.0 nidm tags/NIDM-Results_1.0.0 --squash
- - git subtree add --prefix nidm_releases/1.1.0 nidm tags/NIDM-Results_1.1.0 --squash
+ - git subtree add --prefix nidm_releases/1.1.0 nidm_cmaumet fix_spm_gt --squash
