Travis config fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
  - git remote add nidm https://github.com/incf-nidash/nidm.git
  - git remote add nidm_cmaumet https://github.com/cmaumet/nidm.git
  - git fetch nidm
+ - git fetch nidm_cmaumet
  - git subtree add --prefix nidm nidm/master --squash
  - git subtree add --prefix nidm_releases/1.0.0 nidm tags/NIDM-Results_1.0.0 --squash
- - git subtree add --prefix nidm_releases/1.1.0 nidm_cmaumet fix_spm_gt --squash
+ - git subtree add --prefix nidm_releases/1.1.0 nidm_cmaumet/fix_spm_gt --squash
