nidm_export_all() with latest test battery

--- a/spmexport/ex_spm_voxelwise_t4/config.json
+++ b/spmexport/ex_spm_voxelwise_t4/config.json
@@ -1,7 +1,7 @@
 
 {
 "software": "spm",
-"ground_truth": ["non_sphericity/nidm.ttl"],
+"ground_truth": ["voxel_t=4/nidm.ttl"],
 "inclusive": true,
 "version": "1.2.0"
 }
