--- a/spmexport/ex_spm_cluster_k10/config.json
+++ b/spmexport/ex_spm_cluster_k10/config.json
@@ -1,7 +1,7 @@
 
 {
 "software": "spm",
-"ground_truth": ["non_sphericity/nidm.ttl"],
+"ground_truth": ["cluster_k=10/nidm.ttl"],
 "inclusive": true,
 "version": "1.2.0"
 }
