--- a/spmexport/ex_spm_full_example001/config.json
+++ b/spmexport/ex_spm_full_example001/config.json
@@ -3,5 +3,5 @@
 "software": "spm",
 "ground_truth": ["spm_full_example001/example001_spm_results.ttl"],
 "inclusive": false,
-"version": "1.2.0"
+"versions": ["1.3.0-rc2"]
 }
