--- a/spmexport/ex_spm_HRF_informed_basis/config.json
+++ b/spmexport/ex_spm_HRF_informed_basis/config.json
@@ -1,7 +1,7 @@
 
 {
 "software": "spm",
-"ground_truth": ["HRF_informed_basis/nidm.ttl"],
+"ground_truth": ["hrf_spminfbasisset/nidm.ttl"],
 "inclusive": true,
-"version": "1.2.0"
+"versions": ["1.2.0"]
 }
