--- a/spmexport/ex_spm_conjunction/config.json
+++ b/spmexport/ex_spm_conjunction/config.json
@@ -1,7 +1,7 @@
 
 {
 "software": "spm",
-"ground_truth": ["conjunction/nidm.ttl"],
+"ground_truth": ["inf_conjunction/nidm.ttl"],
 "inclusive": true,
-"version": "1.2.0"
+"versions": ["1.2.0"]
 }
