--- a/spmexport/ex_spm_non_sphericity/config.json
+++ b/spmexport/ex_spm_non_sphericity/config.json
@@ -1,7 +1,7 @@
 
 {
 "software": "spm",
-"ground_truth": ["non_sphericity/nidm.ttl"],
+"ground_truth": ["errmodel_unstruct/nidm.ttl"],
 "inclusive": true,
-"version": "1.2.0"
+"versions": ["1.2.0"]
 }
