--- a/spmexport/ex_spm_temporal_derivative/config.json
+++ b/spmexport/ex_spm_temporal_derivative/config.json
@@ -1,7 +1,7 @@
 
 {
 "software": "spm",
-"ground_truth": ["temporal_derivative/nidm.ttl"],
+"ground_truth": ["hrf_spmtempoderiv/nidm.ttl"],
 "inclusive": true,
-"version": "1.2.0"
+"versions": ["1.2.0"]
 }
