--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,12 @@ language: python
 # use container-based infrastructure
 sudo: false
 python:
-  - "2.7"
+  - "3.4"
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: 
  - pip install --upgrade setuptools
+ # Install nidmresults from source in GitHub repo
+ - pip install --upgrade --no-deps git+https://github.com/cmaumet/nidmresults.git@python3#egg=nidmresults
  - pip install -r requirements.txt
 # command to run tests, e.g. python setup.py test
 script:  
