--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ python:
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: 
  - pip install --upgrade setuptools
+ # Install testing version of nidmresults
+ - pip install -i https://testpypi.python.org/pypi nidmresults
  - pip install -r requirements.txt
 # command to run tests, e.g. python setup.py test
 script:  
