--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ python:
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: 
  - pip install --upgrade setuptools
- # Install testing version of nidmresults
- - pip install -i https://testpypi.python.org/pypi nidmresults
+  # Install nidmresults from source in GitHub repo
+ - pip install --upgrade --no-deps git+https://github.com/cmaumet/nidmresults.git@no_std_space_coord#egg=nidmresults
  - pip install -r requirements.txt
-# command to run tests, e.g. python setup.py test
+ # command to run tests, e.g. python setup.py test
 script:  
 - python TestSPMResultDataModel.py
 - cat debug.log
