--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
 install: 
  - pip install --upgrade setuptools
   # Install nidmresults from source in GitHub repo
+ - pip install --upgrade --no-deps git+https://github.com/cmaumet/nidmresults.git@json_ld#egg=nidmresults
  - pip install -r requirements.txt
  # command to run tests, e.g. python setup.py test
 script:  
