--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,38 @@
 language: python
 # use container-based infrastructure
 sudo: false
+cache:
+  pip: true
+  directories:
+   - test/data/nidmresults-examples
 python:
   - "3.5"
+bundler_args: --retry 9
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: 
  - pip install --upgrade setuptools
   # Install nidmresults from source in GitHub repo
  - pip install --upgrade --no-deps git+https://github.com/cmaumet/nidmresults.git@json_ld#egg=nidmresults
  - pip install -r requirements.txt
- # command to run tests, e.g. python setup.py test
+ # Download test data using git-lfs
+ - curl -sLo - https://github.com/github/git-lfs/releases/download/v1.4.1/git-lfs-linux-amd64-1.4.1.tar.gz | tar xzvf -
+ - export PATH=$PATH:`pwd`/git-lfs-1.4.1
+ - cd test/data/nidmresults-examples
+ # Is this is not a git repo them clone nidmresults-examples
+ - if ! [ -d .git ]; then git lfs clone https://github.com/incf-nidash/nidmresults-examples.git .; fi
+ - git fetch origin
+ - git lfs install
+  # Delete any previous changes (retry because lfs might download files)
+ - travis_retry git reset --hard origin/${NIDM_EX_BRANCH}
+ # A second time to allow for 3 more retries as "--retry 9" does not seem to be
+ # taken into account by Travis CI
+ - travis_retry git reset --hard origin/${NIDM_EX_BRANCH}
+ # command to run tests, e.g. python setup.py test 
+ - cd ../../..
 script:  
 - python TestSPMResultDataModel.py
 - cat debug.log
 before_install: 
  - git config --global user.name "TravisCI"
  - git config --global user.email "travis@dummy.com"
+ - git clone https://github.com/incf-nidash/nidmresults-examples.git
