install latest nidmresults

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ bundler_args: --retry 9
 install: 
  - pip install --upgrade setuptools
   # Install nidmresults from source in GitHub repo
- - pip install --upgrade --no-deps git+https://github.com/cmaumet/nidmresults.git@json_ld#egg=nidmresults
+ - pip install --upgrade --no-deps git+https://github.com/cmaumet/nidmresults.git
  - pip install -r requirements.txt
  - cd test/data/nidmresults-examples
  # Is this is not a git repo them clone nidmresults-examples
