More tests with lfs

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,10 @@ install:
  - pip install --upgrade --no-deps git+https://github.com/cmaumet/nidmresults.git
  - pip install -r requirements.txt
  - cd test/data/nidmresults-examples
+ - ls
  # Is this is not a git repo them clone nidmresults-examples
  - if ! [ -d .git ]; then git lfs clone https://github.com/incf-nidash/nidmresults-examples.git .; fi
+ - git lfs pull
  - cd ../../..
 script:  
 - python TestSPMResultDataModel.py
