--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ install:
  # Is this is not a git repo them clone nidmresults-examples
  - if ! [ -d .git ]; then git lfs clone https://github.com/incf-nidash/nidmresults-examples.git .; fi
  - ls
+ - git pull
+ - ls
  - cd ../../..
 script:  
 - python TestSPMResultDataModel.py
