Increase cache timeout

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ cache:
   pip: true
   directories:
    - test/data/nidmresults-examples
+  timeout: 1000
 python:
   - "3.5"
 bundler_args: --retry 9
