Add octave call

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ install:
  - ls
  - cd ../../..
 script:  
+# Run octave
+- octave --eval "a=1';a"
 - python TestSPMResultDataModel.py
 - cat debug.log
 before_install: 
