--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ install:
  - git pull
  - ls
  - cd ../../..
+ - sudo add-apt-repository -y ppa:octave/stable
+ - sudo apt-get install octave
 script:  
 # Run octave
 - octave --eval "a=1';a"
