--- a/.travis.yml
+++ b/.travis.yml
@@ -33,5 +33,5 @@ script:
 before_install: 
  - git config --global user.name "TravisCI"
  - git config --global user.email "travis@dummy.com"
- - git clone git@github.com:spm/spm12.git
+ - git clone https://github.com/spm/spm12.git
 
