--- a/.travis.yml
+++ b/.travis.yml
@@ -34,4 +34,7 @@ before_install:
  - git config --global user.name "TravisCI"
  - git config --global user.email "travis@dummy.com"
  - git clone https://github.com/spm/spm12.git
+ # Compile SPM MEX files for octave
+ - cd spm12/src
+ - make PLATFORM=octave && make install PLATFORM=octave
 
