--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,8 @@ before_install:
  - git config --global user.name "TravisCI"
  - git config --global user.email "travis@dummy.com"
  - git clone https://github.com/spm/spm12.git
+ # Octave dev tools (mkoctfile) required to compile MEX files
+ - sudo apt-get install liboctave-dev
  # Compile SPM MEX files for octave
  - cd spm12/src
  - make PLATFORM=octave && make install PLATFORM=octave
