--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ install:
  - ls
  - cd ../../..
  - sudo add-apt-repository -y ppa:octave/stable
+ - sudo apt-get update
  - sudo apt-get install octave
 script:  
 # Run octave
