Display octave version

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ install:
  - sudo add-apt-repository -y ppa:octave/stable
  - sudo apt-get update
  - sudo apt-get install octave
+ - octave --version
 script:  
 # Run octave
 - octave --eval "addpath('spm12'); nidm_export_all('test/data/nidmresults-examples/', './spmexport')"
