--- a/.travis.yml
+++ b/.travis.yml
@@ -32,12 +32,14 @@ before_install:
  - git config --global user.name "TravisCI"
  - git config --global user.email "travis@dummy.com"
  - git clone https://github.com/spm/spm12.git
- # Install octave including Octave dev tools (mkoctfile)
- # required to compile MEX files
+ # Install octave 
  - sudo add-apt-repository -y ppa:octave/stable
  - sudo apt-get update
  - sudo apt-get install octave
  - octave --version
+ # Install Octave dev tools (mkoctfile) required to compile 
+ # MEX files
+ - sudo apt-get install liboctave-dev
  # Compile SPM MEX files for octave
  - cd spm12/src
  - make PLATFORM=octave && make install PLATFORM=octave
