Display SPM version

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
  - cd ../../..
 script:  
 # Run octave
-- octave --eval "addpath(fullfile(pwd, 'spm12')); nidm_export_all('test/data/nidmresults-examples/', './spmexport')"
+- octave --eval "addpath(fullfile(pwd, 'spm12')); disp(spm('version')); nidm_export_all('test/data/nidmresults-examples/', './spmexport')"
 - python TestSPMResultDataModel.py
 - cat debug.log
 before_install: 
