Display version of GraphicsMagick

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,4 +44,7 @@ before_install:
  - cd spm12/src
  - make PLATFORM=octave && make install PLATFORM=octave
  - cd ../..
+ # Display version of GraphicsMagick
+ - gm -version
+
 
