Add another ppa for graphicsmagick>=1.3.20 for ubuntu Trusty

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,12 @@ before_install:
  - octave --version
  # Install updated version of GraphicsMagick
  # to avoid 
+ - sudo apt-get install python-software-properties
+ - sudo apt-get install software-properties-common
+ - sudo add-apt-repository ppa:rwky/graphicsmagick
+ - sudo apt-get update
  - sudo apt-get install graphicsmagick
+ # - sudo apt-get install graphicsmagick
  - gm --version
  # Install Octave dev tools (mkoctfile) required to compile 
  # MEX files
