--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ before_install:
  # to avoid 
  - sudo apt-get install python-software-properties
  - sudo apt-get install software-properties-common
- - sudo add-apt-repository ppa:rwky/graphicsmagick
+ - sudo add-apt-repository -y ppa:rwky/graphicsmagick
  - sudo apt-get update
  - sudo apt-get install graphicsmagick
  # - sudo apt-get install graphicsmagick
