--- a/.travis.yml
+++ b/.travis.yml
@@ -32,19 +32,19 @@ before_install:
  - git config --global user.name "TravisCI"
  - git config --global user.email "travis@dummy.com"
  - git clone https://github.com/spm/spm12.git
- # Install octave 
- - sudo add-apt-repository -y ppa:octave/stable
- - sudo apt-get update
- - sudo apt-get install octave
- - octave --version
  # Install updated version of GraphicsMagick
- # to avoid 
+ # to avoid 'your version of GraphicsMagick limits images to 8 bits per pixel'
  - sudo apt-get install python-software-properties
  - sudo apt-get install software-properties-common
  - sudo add-apt-repository -y ppa:rwky/graphicsmagick
  - sudo apt-get update
  - sudo apt-get install graphicsmagick
- # Install Octave dev tools (mkoctfile) required to compile 
+ # Install octave 
+ - sudo add-apt-repository -y ppa:octave/stable
+ - sudo apt-get update
+ - sudo apt-get install octave
+ - octave --version
+  # Install Octave dev tools (mkoctfile) required to compile 
  # MEX files
  - sudo apt-get install liboctave-dev
  # Compile SPM MEX files for octave
