Fix path to current sources

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ before_install:
  # Install SPM12
  - git clone https://github.com/spm/spm12.git
  # Run docker snapshot of dev octave (until 4.4 is released)
- - did=$(docker run -it -d --rm -v `pwd`/spm12/:/spm12 -v `pwd`/nidmresults-spm/:/nidmresults-spm mtmiller/octave-snapshot)
+ - did=$(docker run -it -d --rm -v `pwd`/spm12/:/spm12 -v `pwd`/incf-nidash/nidmresults-spm/:/nidmresults-spm mtmiller/octave-snapshot)
  # Compile SPM MEX files for octave
  - docker exec -it $did cd spm12/src; make PLATFORM=octave && make install PLATFORM=octave; cd ../..
  # Run tests in Octave
