--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,15 @@ install:
  - git pull
  - ls
  - cd ../../..
+ - ls
 script:  
-# Run octave
-- python TestSPMResultDataModel.py
-- cat debug.log
+ # Run docker snapshot of dev octave (until 4.4 is released)
+ - did=$(docker run -it -d --rm -v `pwd`/spm12/:/spm12 -v `pwd`:/nidmresults-spm mtmiller/octave-snapshot -v `pwd`/spmexport:/spmexport)
+ # Run tests in Octave
+ - docker exec -it $did octave --eval "addpath('/spm12'); ls('/nidmresults-spm'); addpath('/nidmresults-spm/exporter'); addpath('/nidmresults-spm'); disp(spm('version')); nidm_export_all('/nidmresults-spm/test/data/nidmresults-examples/', '/spmexport')"
+ # Run tests
+ - python TestSPMResultDataModel.py
+ - cat debug.log
 before_install: 
  - git config --global user.name "TravisCI"
  - git config --global user.email "travis@dummy.com"
@@ -42,7 +47,3 @@ before_install:
  - cd ../..
  - pwd
  - ls
- # Run docker snapshot of dev octave (until 4.4 is released)
- - did=$(docker run -it -d --rm -v `pwd`/spm12/:/spm12 -v `pwd`:/nidmresults-spm mtmiller/octave-snapshot)
- # Run tests in Octave
- - docker exec -it $did octave --eval "addpath('/spm12'); ls('/nidmresults-spm'); addpath('/nidmresults-spm/exporter'); addpath('/nidmresults-spm'); disp(spm('version')); nidm_export_all('/nidmresults-spm/test/data/nidmresults-examples/', './spmexport')"
