--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
  - ls
 script:  
  # Run docker snapshot of dev octave (until 4.4 is released)
- - did=$(docker run -it -d --rm -v `pwd`/spm12/:/spm12 -v `pwd`:/nidmresults-spm -v `pwd`/spmexport:/spmexport mtmiller/octave-snapshot)
+ - did=$(docker run -it -d --rm -v `pwd`/spm12/:/spm12 -v `pwd`:/nidmresults-spm -v `pwd`/spmexport:/spmexport octave_with_spm)
  # Run tests in Octave
  - docker exec -it $did octave --eval "addpath('/spm12'); ls('/nidmresults-spm'); addpath('/nidmresults-spm/exporter'); addpath('/nidmresults-spm'); disp(spm('version')); nidm_export_all('/nidmresults-spm/test/data/nidmresults-examples/', '/spmexport')"
  # Run tests
@@ -37,13 +37,4 @@ script:
 before_install: 
  - git config --global user.name "TravisCI"
  - git config --global user.email "travis@dummy.com"
- # Install SPM12
- - git clone https://github.com/spm/spm12.git
- # Octave dev tools (mkoctfile) required to compile MEX files
- - sudo apt-get install liboctave-dev
- # Compile SPM MEX files for octave
- - cd spm12/src
- - make PLATFORM=octave && make install PLATFORM=octave
- - cd ../..
- - pwd
- - ls
+ - docker build -t octave_with_spm .
