--- a/docker_spm/Dockerfile
+++ b/docker_spm/Dockerfile
@@ -4,6 +4,6 @@ RUN apt-get update && apt-get install -y git
 
 RUN git clone https://github.com/spm/spm12.git && cd spm12/src && make PLATFORM=octave && make install PLATFORM=octave
 
-RUN octave --eval "addpath('spm12'); path; savepath;"
+RUN octave --eval "addpath('/spm12'); path; savepath;"
 
 ADD /spm12 /spm12
