--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ script:
  # Run docker snapshot of dev octave (until 4.4 is released)
  - did=$(docker run -it -d --rm -v `pwd`/code:/code -v `pwd`/test/data:/test_data -v `pwd`/spmexport:/spmexport octave_with_spm)
  # Run tests in Octave
- - docker exec -it $did octave --eval "addpath('/spm12'); ls('/code'); addpath('/code/exporter'); addpath('/code'); disp(spm('version')); nidm_export_all('/test_data/', '/spmexport')"
+ - docker exec -it $did octave --eval "addpath('/code/exporter'); addpath('/code'); nidm_export_all('/test_data/', '/spmexport')"
  # Run tests
  - python TestSPMResultDataModel.py
  - cat debug.log
