--- a/.travis.yml
+++ b/.travis.yml
@@ -28,13 +28,13 @@ install:
  - ls
 script:  
  # Run docker snapshot of dev octave (until 4.4 is released)
- - did=$(docker run -it -d --rm -v `pwd`/test/data/nidmresults-examples:/test_data -v `pwd`/spmexport:/spmexport octave_with_spm)
+ - did=$(docker run -it -d --rm -v `pwd`/test/data/nidmresults-examples:/test_data -v `pwd`/spmexport:/spmexport -v `pwd`/exporter:/exporter cmaumet/octave-spm)
  # Run tests in Octave
- - docker exec -it $did octave --no-window-system --eval "addpath('/code/exporter'); addpath('/code'); nidm_export_all('/test_data/', '/spmexport')"
+ - docker exec -it $did octave --no-window-system --eval "addpath('/exporter'); addpath('/exporter/test'); nidm_export_all('/test_data/', '/spmexport')"
  # Run tests
  - python TestSPMResultDataModel.py
  - cat debug.log
 before_install: 
  - git config --global user.name "TravisCI"
  - git config --global user.email "travis@dummy.com"
- - docker build -t octave_with_spm ./docker_spm/
+ - docker pull cmaumet/octave-spm
