Update docker version

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: python
 sudo: required
 services:
   - docker
+# Update docker version
+addons:
+  apt:
+    packages:
+      - docker-ce
 cache:
   pip: true
   directories:
