Test file in test folder

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ script:
  # Run tests in Octave
  - docker exec -it $did octave --no-window-system --eval "addpath('/exporter'); addpath('/exporter/test'); nidm_export_all('/test_data/', '/spmexport')"
  # Run tests
- - python TestSPMResultDataModel.py
+ - python test/TestSPMResultDataModel.py
  - cat debug.log
 before_install:
  # Update docker version
